--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ Bruh Moment
 
 <h1>My First Bazinga</h1>
 <p>My second bazinga!.</p>
-<p>The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga p</p>
+<p>The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
+All communication systems .Peak civilization. Bazinga is love. Bazinga is life</p>
 
 </body>
 </html>
