--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Bruh Moment
 <h1>My First Bazinga</h1>
 <p>My second bazinga!.</p>
 <p>The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
-All communication systems .Peak civilization. Bazinga is love. Bazinga is life
+All communication systems .Peak civilization. Bazinga is love. Bazinga is life. However, Simon is also life. Does this mean Simon == Bazinga? That's for you to decide. Stay woke kings.
 </p>
 
 </body>
