--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@ Bruh Moment
 </head>
 <body>
 
-<h1>My First Bazinga</h1>
-<p>My second bazinga!.</p>
+<h1>My First Bazinga!</h1>
 <p>The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
 All communication systems .Peak civilization. Bazinga is love. Bazinga is life. However, Simon is also life. Does this mean Simon == Bazinga? That's for you to decide. Stay woke kings.
+1/25/2021
 </p>
+<h>My second bazinga!</h>
+<p> Hey guys, I'm back. Today we'll be talking about bazinga #2, or moreover the lack of it. Do you all feel shame? Shame when you realize that Downtown Danny will never love you back. Danny is mine and mine alone. 
+Fools, don't you understand? It wasn't that Danny didn't like you, but it was that Danny was mine from the beginning. Muahahahaha, Downtown Danny will be mine forever!
+3/20/2077
+</p>
+
+
 
 </body>
 </html>
