--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Bruh Moment
 All communication systems .Peak civilization. Bazinga is love. Bazinga is life. However, Simon is also life. Does this mean Simon == Bazinga? That's for you to decide. Stay woke kings.
 1/25/2021
 </p>
-<h>My second bazinga!</h>
+<h1>My second bazinga!</h1>
 <p> Hey guys, I'm back. Today we'll be talking about bazinga #2, or moreover the lack of it. Do you all feel shame? Shame when you realize that Downtown Danny will never love you back. Danny is mine and mine alone. 
 Fools, don't you understand? It wasn't that Danny didn't like you, but it was that Danny was mine from the beginning. Muahahahaha, Downtown Danny will be mine forever!
 3/20/2077
