--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Fools, don't you understand? It wasn't that Danny didn't like you, but it was th
 3/20/2077
 </p>
 
+<img src="https://media.discordapp.net/attachments/735283469403291680/803385849730695188/simonbitmoji.jpeg" width="104" height="142">
 
 
 </body>
