--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ All communication systems .Peak civilization. Bazinga is love. Bazinga is life. 
 <p> Hey guys, I'm back. Today we'll be talking about bazinga #2, or moreover the lack of it. Do you all feel shame? Shame when you realize that Downtown Danny will never love you back. Danny is mine and mine alone. 
 Fools, don't you understand? It wasn't that Danny didn't like you, but it was that Danny was mine from the beginning. Muahahahaha, Downtown Danny will be mine forever!
 3/20/2077
-<a href="https://youtu.be/cyHxkWF1KUQ">Bazinga!</a>
+<a href="https://youtu.be/cyHxkWF1KUQ?t=2454">Bazinga!</a>
 
 </p>
 
