--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 Bruh Moment
 </head>
 
-<body>
+<body style="background-color:black;">
 
 <h1>My First Bazinga!</h1>
 <p>The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
