--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Bazinga!</title>
-</head>
+<title >Bazinga!</title>
+</head style="color:white">
 Bruh Moment
 </head>
 
 <body style="background-color:black;">
 
-<h1>My First Bazinga!</h1>
-<p>The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
+<h1 style="color:white">My First Bazinga!</h1>
+<p style="color:white">The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
 All communication systems .Peak civilization. Bazinga is love. Bazinga is life. However, Simon is also life. Does this mean Simon == Bazinga? That's for you to decide. Stay woke kings.
 1/25/2021
 </p>
