--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <title >Bazinga!</title>
-<head style="color:white">
-Bruh Moment
+<head>
+    <p style="color:white">Bruh Moment</p>
 </head>
 
 <body style="background-color:black;">
 
 <h1 style="color:white">My First Bazinga!</h1>
-<p style="color:white">The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
-All communication systems .Peak civilization. Bazinga is love. Bazinga is life. However, Simon is also life. Does this mean Simon == Bazinga? That's for you to decide. Stay woke kings.
-1/25/2021
-</p>
+    <p style="color:white">The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
+    All communication systems .Peak civilization. Bazinga is love. Bazinga is life. However, Simon is also life. Does this mean Simon == Bazinga? That's for you to decide. Stay woke kings.
+    1/25/2021
+    </p>
 <h1 style="color:white">My second bazinga!</h1>
-<p style="color:red;font-family:verdana"> Hey guys, I'm back. Today we'll be talking about bazinga #2, or moreover the lack of it. Do you all feel shame? Shame when you realize that Downtown Danny will never love you back. Danny is mine and mine alone. 
-Fools, don't you understand? It wasn't that Danny didn't like you, but it was that Danny was mine from the beginning. Muahahahaha, Downtown Danny will be mine forever!
-3/20/2077
-<a href="https://youtu.be/cyHxkWF1KUQ?t=2454">Bazinga!</a>
+    <p style="color:red;font-family:verdana"> Hey guys, I'm back. Today we'll be talking about bazinga #2, or moreover the lack of it. Do you all feel shame? Shame when you realize that Downtown Danny will never love you back. Danny is mine and mine alone. 
+    Fools, don't you understand? It wasn't that Danny didn't like you, but it was that Danny was mine from the beginning. Muahahahaha, Downtown Danny will be mine forever!
+    3/20/2077
+    <a href="https://youtu.be/cyHxkWF1KUQ?t=2454">Bazinga!</a>
 
-</p>
+    </p>
 
 <img src="https://media.discordapp.net/attachments/735283469403291680/803385849730695188/simonbitmoji.jpeg" alt="Simon, 1900-2014" width="1000" height="750">
 
