--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 
 <div class="myDiv">
 <h1>My First Bazinga!</h1>
-    <p style="color:white" title="Fortnite anthem">The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
+    <p style="color:white" title="Fortnite anthem">The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection of all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
     All communication systems .Peak civilization. Bazinga is love. Bazinga is life. However, Simon is also life. Does this mean Simon == Bazinga? That's for you to decide. Stay woke kings.
     1/25/2021
     </p>
 </div>
 
-<div class="something">
+
+<button onclick="displayResult()">Change the text of paragraph 2! (If you want, I don't actually care)</button>
+
+
+<div id="something">
 <h1 style="color:white">My second bazinga!</h1>
     <p style="color:red;font-family:Reggae One" title="What is UP my fellow Danny Lovers?"> 
     Hey guys, I'm back. Today we'll be talking about bazinga #2, or moreover the lack of it. Do you all feel shame? Shame when you realize that Downtown Danny will never love you back. Danny is mine and mine alone. 
@@ -30,7 +34,7 @@
 </div>
  
 
-<img src="https://media.discordapp.net/attachments/735283469403291680/803385849730695188/simonbitmoji.jpeg" alt="Simon, 1900-2014" width="1000" height="750">
+<img src="https://media.discordapp.net/attachments/735283469403291680/803385849730695188/simonbitmoji.jpeg" alt="Simon, 1900-2014" width="500" height="750">
 
 
 
