--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Reggae+One" rel="stylesheet"> 
     <title >Bazinga!</title>
     <p style="color:white">Bruh Moment</p>
+    <meta charset="UTF-8">
+    <meta name="author" content="Zidane Karim">
+    <meta http-equiv="refresh" content="30">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<a href="test.html" target="_blank">Page 2</a>
 <div class="myDiv">
 <h1>My First Bazinga!</h1>
     <p style="color:white" title="Fortnite anthem">The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection of all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
@@ -19,8 +22,19 @@
     </p>
 </div>
 
+<select>
+    <option>Test</option>
+    <option>123</option>
+    <option>Wowzers</option>
+</select>
 
-<button onclick="displayResult()">Change the text of paragraph 2! (If you want, I don't actually care)</button>
+<button class="button" onclick="displayResult()">Change the text of paragraph 2! (If you want, I don't actually care)</button>
+
+<a type="button" class="button" href="test.html" target="_blank">Next Page</a>
+
+
+<button class="button" onclick="cpsTest()">Check your cps!</button>
+
 
 
 <div id="something">
@@ -32,13 +46,24 @@
     <a href="https://youtu.be/cyHxkWF1KUQ?t=2454" target="_blank">Bazinga!</a>
     </p>
 </div>
+
+<div id="totalclicks">
+    <h2 style="color:white">Clicks</h2>
+        <p style="color:red;font-family:Reggae One" title="Clicks"> 
+        Clicks
+        </p>
+    </div>
  
 
 <img src="https://media.discordapp.net/attachments/735283469403291680/803385849730695188/simonbitmoji.jpeg" alt="Simon, 1900-2014" width="500" height="750">
 
 
 
+
 <script src='script.js'></script>
+<noscript>
+<p>Sorry, your browser does not support JavaScript or you have turned it off!</p>
+</noscript>
 
 
 </body>
