--- a/index.html
+++ b/index.html
@@ -1,71 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Reggae+One" rel="stylesheet"> 
-    <title >Bazinga!</title>
-    <p style="color:white">Bruh Moment</p>
     <meta charset="UTF-8">
-    <meta name="author" content="Zidane Karim">
-    <meta http-equiv="refresh" content="30">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta author content="Zidane Karim">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CPS Counter</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    
+
 </head>
 <body>
-<a href="test.html" target="_blank">Page 2</a>
-<div class="myDiv">
-<h1>My First Bazinga!</h1>
-    <p style="color:white" title="Fortnite anthem">The essence of Bazinga is not simply an exclamation. Bazinga is an art. It is the essence, the moral fiber of our beings. Bazinga is a collection of all information. All human knowledge. Philosophy, medicine, technology, science, math, literature.
-    All communication systems .Peak civilization. Bazinga is love. Bazinga is life. However, Simon is also life. Does this mean Simon == Bazinga? That's for you to decide. Stay woke kings.
-    1/25/2021
-    </p>
+<noscript id="noscript">Your browser does not support JavaScript!</noscript>
+<div id="head">
+    <h1>Simon Clicker</h1>
 </div>
 
-<select>
-    <option>Test</option>
-    <option>123</option>
-    <option>Wowzers</option>
-</select>
-
-<button class="button" onclick="displayResult()">Change the text of paragraph 2! (If you want, I don't actually care)</button>
-
-<a type="button" class="button" href="test.html" target="_blank">Next Page</a>
-
-
-<button class="button" onclick="cpsTest()">Check your cps!</button>
-
-
-
-<div id="something">
-<h1 style="color:white">My second bazinga!</h1>
-    <p style="color:red;font-family:Reggae One" title="What is UP my fellow Danny Lovers?"> 
-    Hey guys, I'm back. Today we'll be talking about bazinga #2, or moreover the lack of it. Do you all feel shame? Shame when you realize that Downtown Danny will never love you back. Danny is mine and mine alone. 
-    Fools, don't you understand? It wasn't that Danny didn't like you, but it was that Danny was mine from the beginning. Muahahahaha, Downtown Danny will be mine forever!
-    3/20/2077
-    <a href="https://youtu.be/cyHxkWF1KUQ?t=2454" target="_blank">Bazinga!</a>
-    </p>
+<div id="clickbutton">
+    <p>Click Me!</p>
 </div>
 
-<div id="totalclicks">
-    <h2 style="color:white">Clicks</h2>
-        <p style="color:red;font-family:Reggae One" title="Clicks"> 
-        Clicks
-        </p>
-    </div>
- 
+<div id="clicks" style="display:none">
+    <p>Your total Simons</p>
+</div>
 
-<img src="https://media.discordapp.net/attachments/735283469403291680/803385849730695188/simonbitmoji.jpeg" alt="Simon, 1900-2014" width="500" height="750">
+<div>
+<a href="https://twitter.com/home?lang=en" target="_blank">
+  <img class="twitter" src="https://help.twitter.com/content/dam/help-twitter/brand/logo.png" alt="Twitter Logo">  
+</a>
+</div>
+
+<div class="pages">
+    <a href="test.html" target="_blank" class="button">Test Page</a>
+    <a href="random.html" target="_blank" class="button">Random Page</a>
+</div>
+
+<p id="demo"></p>
+
+<img id="simonimage" src=https://media.discordapp.net/attachments/735283469403291680/811661743553904670/simon.png>
 
 
 
-
-<script src='script.js'></script>
-<noscript>
-<p>Sorry, your browser does not support JavaScript or you have turned it off!</p>
-</noscript>
-
-
+<script src="script.js"></script>
 </body>
 </html>
-
