--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta author content="Zidane Karim">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CPS Counter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     
 
